feat(certificates): создает блок со слайдером и кнопкой текст

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -4,6 +4,7 @@
 include ./blocks/common/manufacturers
 include ./blocks/common/confidence
 include ./blocks/common/company
+include ./blocks/common/certificates
 
 //- page-name..
 include ./blocks/index/intro
