--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -6,5 +6,7 @@ block pageContent
   +advantages().page-home__advantages
   +manufacturers().page-home__manufacturers
 
+  +certificates().page-home__certificates
+
   +company().page-home__company
   +confidence().page-home__confidence
