--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,7 @@
 @import 'blocks/common/manufacturers.scss';
 @import 'blocks/common/confidence.scss';
 @import 'blocks/common/company.scss';
+@import 'blocks/common/certificates.scss';
 
 // page-name..
 @import 'blocks/index/intro.scss';
