--- a/src/scss/ui/text.scss
+++ b/src/scss/ui/text.scss
@@ -16,6 +16,11 @@
     color: $primary;
   }
 
+  em {
+    font-style: normal;
+    font-weight: 500;
+  }
+
   &--medium {
     font-size: 15px;
   }
