feat(certificates): добавляет стили и корректирует работу по вьюпортам

--- a/src/components/blocks/common/certificates.pug
+++ b/src/components/blocks/common/certificates.pug
@@ -51,6 +51,8 @@ mixin certificates()
 
                 +navigation-swiper().navigation-swiper--btn-secondary
 
+
+            //- кнопка текст
               +link({href: "#", ariaLabel:"Переход на страницу сертификатов"}).certificates__image-link
                 .certificates__link-button
 
