--- a/src/scss/blocks/common/certificates.scss
+++ b/src/scss/blocks/common/certificates.scss
@@ -3,95 +3,53 @@
   height: fit-content;
 
   .swiper-slide {
-    //display: grid;
-    //width: 100%;
-    //height: 100%;
+    display: grid;
+    width: 100%;
+  }
+
+  .swiper {
+    @include vp-tablet-landscape {
+      margin: 0;
+    }
+  }
+
+  &__image-swiper {
+    @include vp-tablet-landscape {
+      width: 90%;
+      margin: 0;
+    }
   }
 
   &__content {
+    display: flex;
+    flex-direction: column;
     color: $primary;
     background-color: $accent-bg;
+
+    box-shadow: 50px 0 0 0 $accent-bg, -50px 0 0 0 $accent-bg;
+
     @include vp-tablet-landscape {
-      display: flex;
+      flex-direction: row;
       gap: 20px;
+      width: 100%;
+
+      box-shadow: 900px 0 0 0 $accent-bg, -900px 0 0 0 $accent-bg;
     }
   }
 
   &__context {
-    @include vp-tablet-landscape {
-      width: 50%;
-    }
-  }
-
-  &__image-slider {
-    @include vp-tablet-landscape {
-      width: 50%;
-    }
-  }
-
-  &__image-cards {
-    //display: flex;
-    //width: 100%;
-  }
-
-  &__image-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    //box-sizing: border-box;
-    //border: 1px solid $border-fill;
-    //border-radius: 8px;
-
-    //min-width: 100%;
-    //width: 57.142%;
+    padding-top: 17.461%;
+    margin-bottom: 13.23%;
 
     @include vp-tablet {
-      //width: 32.727%;
+      padding: 10.986% 4.85% 0 4.85%;
+      margin-bottom: 8.94%;
     }
 
     @include vp-tablet-landscape {
-      width: 100%;
-    }
-  }
-
-  &__image-content{
-    //position: relative;
-    //display: flex;
-    //flex-direction: column;
-    //justify-content: center;
-    //text-align: center;
-    margin: 0 auto;
-    //padding: 33.68%;
-
-
-    @include vp-tablet {
-      //padding: 33.68%;
-    }
-
-    @include vp-tablet-landscape {
-      width: 69.265%;
-    }
-
-    img {
-      display: block;
-      //position: absolute;
-      //top: 0;
-      //left: 0;
-      //right: 0;
-      width: 100%;
-      height: auto;
-      overflow: hidden;
-      //z-index: -1;
-
-      object-fit: cover;
-      object-position: center;
-
-      background-color: $accent-bg;
-      margin: 0;
-
-      //user-select: none;
-      //transition: transform $trans-default;
+      width: 50%;
+      padding: 8.015% 5.662% 8.015% 6.986%;
+      margin-bottom: 0;
     }
   }
 
@@ -106,9 +64,11 @@
   &__text {
     color: rgba($primary, 0.8);
     line-height: 150%;
+    width: 99%;
 
     @include vp-tablet {
       line-height: 140%;
+      width: 100%;
     }
 
     p {
@@ -120,8 +80,59 @@
     }
   }
 
-  // кнопка
+  &__image-slider {
+    margin-bottom: 20%;
+
+    @include vp-tablet {
+      margin-bottom: 14.1%;
+    }
+
+    @include vp-tablet-landscape {
+      width: 50%;
+      padding-top: 3.089%;
+      margin-bottom: 0;
+    }
+  }
+
+  &__image-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+
+  &__image-content{
+    margin: 0 auto;
+    width: 90.5%;
+
+
+    @include vp-tablet {
+      width: 71.4%;
+    }
+
+    @include vp-tablet-landscape {
+      width: 77%;
+    }
+
+    img {
+      display: block;
+      width: 100%;
+      height: auto;
+      overflow: hidden;
+
+      object-fit: cover;
+      object-position: center;
+
+      background-color: $accent-bg;
+      margin: 0;
+
+      user-select: none;
+    }
+  }
+
+  // кнопка текст
   // ----------------
+  /*
   &__image-link {
     display: block;
     max-width: fit-content;
@@ -154,5 +165,5 @@
         fill: none;
         place-self: center;
     }
-  }
+  }*/
 }
