feat(cooperation): создает секцию с блоками

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -5,6 +5,7 @@ include ./blocks/common/manufacturers
 include ./blocks/common/confidence
 include ./blocks/common/company
 include ./blocks/common/certificates
+include ./blocks/common/cooperation
 
 //- page-name..
 include ./blocks/index/intro
