--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -7,6 +7,6 @@ block pageContent
   +manufacturers().page-home__manufacturers
 
   +certificates().page-home__certificates
-
+  +cooperation().page-home__cooperation
   +company().page-home__company
   +confidence().page-home__confidence
