--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,6 +25,7 @@
 @import 'blocks/common/confidence.scss';
 @import 'blocks/common/company.scss';
 @import 'blocks/common/certificates.scss';
+@import 'blocks/common/cooperation.scss';
 
 // page-name..
 @import 'blocks/index/intro.scss';
