--- a/src/scss/blocks/common/cooperation.scss
+++ b/src/scss/blocks/common/cooperation.scss
@@ -1,3 +1,85 @@
 .cooperation {
   max-width: 100vw;
+  color: $base;
+
+  .swiper-slide {
+    display: grid;
+    width: 100%;
+    min-height: 100%;
+  }
+
+  &__title {
+    margin-bottom: 40px;
+
+    @include vp-tablet {
+      margin-bottom: 50px;
+    }
+  }
+
+  &__swiper {
+    margin-bottom: 20px;
+
+    @include vp-tablet {
+      margin-bottom: 30px;
+    }
+  }
+
+  &__cards {
+    display: flex;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+
+  &__card {
+    box-sizing: border-box;
+    border: 1px solid $border-fill;
+    border-radius: 8px;
+    min-width: 100%;
+    width: 85.983%;
+
+    @include vp-tablet {
+      width: 60.61%;
+    }
+
+    @include vp-tablet-landscape {
+      width: 29.412%;
+    }
+  }
+
+  &__content{
+    display: flex;
+    flex-direction: column;
+    padding: 9.232% 6.155% 8.924%;
+
+
+    @include vp-tablet {
+      padding: 7.5% 7% 9.5%;
+    }
+  }
+
+  &__card-title {
+    margin-bottom:10px;
+  }
+
+  &__card-text {
+    line-height: 130%;
+    color: rgba($base, 0.8);
+    margin-bottom: auto;
+  }
+
+  &__card-icon {
+    display: grid;
+    place-content: center;
+    color: $primary;
+    background-color: $accent-bg;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    margin-bottom: 33px;
+  }
+
+  &__deferment-block {
+    background-color: $accent-bg-items;
+  }
 }
