feat(btn): создает дополнительные стили для базавой кнопки

--- a/src/components/blocks/common/cooperation.pug
+++ b/src/components/blocks/common/cooperation.pug
@@ -61,5 +61,5 @@ mixin cooperation()
             .text.text--small.cooperation__deferment-text
               p Свяжитесь с менеджером#[br]для уточнение деталей
 
-          +btn().btn--border-dashed.cooperation__deferment-btn
+          +btn().btn--border-dashed-base.cooperation__deferment-btn
             span Связаться с&nbsp;менеджером
