--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -1,5 +1,6 @@
 // colors
 $primary: #623061;
+$primary-hover: #743573;
 $secondary: lime; // example
 $accent: cyan; // example
 $bg-intro: #055b5c;
