--- a/src/scss/ui/btn.scss
+++ b/src/scss/ui/btn.scss
@@ -11,7 +11,12 @@
 
   transition: opacity $trans-default,  background-color $trans-default, color $trans-default;
 
-  &--border-dashed {
+  &:active {
+    opacity: 0.8;
+  }
+
+  &--border-dashed,
+  &--border-dashed-base {
     box-sizing: border-box;
     background-color: $transparent;
     border: 2px dashed rgba($white, 0.5);
@@ -22,8 +27,17 @@
       background-color: $white;
     }
 
-    &:active {
-      opacity: 0.8;
+  }
+
+  &--border-dashed-base {
+    border: 2px dashed rgba($base, 0.5);
+    border-radius: 12px;
+    color: $base;
+
+    @include hover-focus {
+      color: $white;
+      background-color: $primary-hover;
+      border-color: $primary-hover;
     }
   }
 }
