--- a/src/scss/blocks/common/cooperation.scss
+++ b/src/scss/blocks/common/cooperation.scss
@@ -29,34 +29,22 @@
     width: 100%;
     padding: 0;
     margin: 0;
+
     list-style-type: none;
+    counter-reset: counter-container;
   }
 
   &__card {
     box-sizing: border-box;
     border: 1px solid $border-fill;
     border-radius: 8px;
-    min-width: 100%;
-    width: 85.983%;
-
-    @include vp-tablet {
-      width: 60.61%;
-    }
-
-    @include vp-tablet-landscape {
-      width: 29.412%;
-    }
+    width: 100%;
   }
 
   &__content{
     display: flex;
     flex-direction: column;
-    padding: 9.232% 6.155% 8.924%;
-
-
-    @include vp-tablet {
-      padding: 7.5% 7% 9.5%;
-    }
+    padding: 7.8% 7% 14.5%;
   }
 
   &__card-title {
@@ -77,6 +65,7 @@
     width: 90px;
     height: 90px;
     border-radius: 50%;
+    margin: 0 auto;
     margin-bottom: 33px;
   }
 
