--- a/src/scss/blocks/common/cooperation.scss
+++ b/src/scss/blocks/common/cooperation.scss
@@ -14,6 +14,14 @@
     @include vp-tablet {
       margin-bottom: 50px;
     }
+
+    @include vp-tablet-landscape {
+      max-width: 73%;
+    }
+
+    @include vp-desktop {
+      max-width: 50%;
+    }
   }
 
   &__swiper {
@@ -45,6 +53,18 @@
     display: flex;
     flex-direction: column;
     padding: 7.8% 7% 14.5%;
+
+    &::before {
+      counter-increment: counter-container;
+      content: "0" counter(counter-container) "";
+      display: block;
+      font-family: $base-font;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 30px;
+      line-height: 140%;
+      color: $primary;
+    }
   }
 
   &__card-title {
@@ -107,7 +127,7 @@
   }
 
   &__deferment-btn{
-    font-family: 'Roboto Flex';
+    font-family: $base-font;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
