feat(popular): создает блок популярное

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -10,6 +10,7 @@ include ./blocks/common/cooperation
 //- page-name..
 include ./blocks/index/intro
 include ./blocks/index/advantages
+include ./blocks/index/popular
 
 
 //- UI
@@ -19,3 +20,4 @@ include ./ui/btn
 include ./ui/link
 include ./ui/navigation-swiper
 include ./ui/slider-image
+include ./ui/catalog-card
