--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,6 +4,7 @@ block pageContent
 
   +intro().page-home__intro
   +advantages().page-home__advantages
+  +popular().page-home__popular
   +manufacturers().page-home__manufacturers
 
   +certificates().page-home__certificates
