--- a/src/components/blocks/index/popular.pug
+++ b/src/components/blocks/index/popular.pug
@@ -1,5 +1,17 @@
 mixin popular()
 
+  -
+    const optionsCard = [
+      {
+        hrefProduct: "#",
+        imageName: "toy-dragon",
+        textTitle: "Сладкий подарок «Антошка»",
+        textCode: "7898",
+        textPrice: "1300 руб.",
+        textInfo: "800 гр.",
+      },
+    ];
+
   section.popular&attributes(attributes)
     .wrapper
       .popular__container
@@ -8,7 +20,8 @@ mixin popular()
           .title.title--medium.popular__title
               h2 Популярные позиции
 
-          +catalog-card().popular__catalog-card
+          each option in optionsCard
+            +catalog-card(option).popular__catalog-card
 
           +btn().btn--border-dashed-base.popular__btn-look
             span Смотреть еще
