--- a/src/components/ui/catalog-card.pug
+++ b/src/components/ui/catalog-card.pug
@@ -1,11 +1,12 @@
-mixin catalog-card(options = {})
+mixin catalog-card(options = {}, classCartBtn)
 
   .catalog-card&attributes(attributes)
 
     +link({href: options.hrefProduct, ariaLabel:"Переход в карточку товара"}).catalog-card__link
 
       +img(options.imageName, "png", 166, 156, "Товар магазина.")
-      h3.catalog-card__title.title.title--extra-small!= options.textTitle
+      .catalog-card__title.title.title--extra-small
+        h3!= options.textTitle
 
     .catalog-card__container
 
@@ -16,12 +17,16 @@ mixin catalog-card(options = {})
 
         .catalog-card__price
           b!= options.textPrice
+
         .catalog-card__info
           i!= options.textInfo
 
       .catalog-card__buttons-wrapper
-        button.catalog-card__order-btn.button
-          | Запрос в 1 клик
-        button.catalog-card__cart-btn.button
+
+        +btn().catalog-card__order-btn.btn--base
+          span Запрос в 1 клик
+
+        +btn().btn--cart.catalog-card__cart-btn(class= classCartBtn)
+          +icon("icon-cart", 18, 21)
           span В корзину
 
