--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -1,13 +1,14 @@
 // colors
 $primary: #623061;
 $primary-hover: #743573;
-$secondary: lime; // example
+$secondary: #909090;
 $accent: cyan; // example
 $bg-intro: #055b5c;
 $accent-title: #fecb5e;
 $accent-bg-items: #ffdf85;
 $accent-bg-items-hover: #ffd151;
 $accent-bg: #f7f7f7;
+$base-bg-btn: #f8f8f8;
 $accent-link: #e72222;
 $blur-bg: #fff4fe;
 $border-fill: #e2e3e5;
