--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 @import 'ui/text.scss';
 @import 'ui/navigation-swiper.scss';
 @import 'ui/slider-image.scss';
+@import 'ui/catalog-card.scss';
 
 // LAYOUT
 @import 'layout/header.scss';
@@ -30,6 +31,7 @@
 // page-name..
 @import 'blocks/index/intro.scss';
 @import 'blocks/index/advantages.scss';
+@import 'blocks/index/popular.scss';
 
 // PAGES
 @import 'pages/page-home.scss';
