--- a/src/scss/ui/btn.scss
+++ b/src/scss/ui/btn.scss
@@ -15,8 +15,33 @@
     opacity: 0.8;
   }
 
+  &--base {
+    background-color: $base-bg-btn;
+    border: none;
+    color: $base;
+    padding: 15px 23px;
+
+    @include hover-focus {
+      background-color: $accent-bg-items;
+    }
+  }
+
+  &--cart {
+    //display: block;
+    border: none;
+    border-radius: 6px;
+    padding: 10.5px 12px;
+    //max-height: 42px;
+    margin: auto 0;
+
+    @include hover-focus {
+      background-color: $primary-hover;
+    }
+  }
+
   &--border-dashed,
-  &--border-dashed-base {
+  &--border-dashed-base,
+  &--border-dashed-primary {
     box-sizing: border-box;
     background-color: $transparent;
     border: 2px dashed rgba($white, 0.5);
@@ -33,7 +58,16 @@
     border: 2px dashed rgba($base, 0.5);
     border-radius: 12px;
     color: $base;
+  }
 
+  &--border-dashed-primary {
+    border: 2px dashed rgba($primary, 0.5);
+    color: $primary;
+    padding: 15px 35px;
+  }
+
+  &--border-dashed-base,
+  &--border-dashed-primary {
     @include hover-focus {
       color: $white;
       background-color: $primary-hover;
