feat(request): создает компанент для десктопа

--- a/src/components/blocks/index/popular.pug
+++ b/src/components/blocks/index/popular.pug
@@ -88,6 +88,8 @@ mixin popular()
             each option in optionsCard
               +catalog-card(option, classCartBtn= "catalog-card__cart-btn--popular").popular__cards-item
 
+            +request()
+
           +btn().btn--border-dashed-primary.popular__btn-look
             span Смотреть еще
 
