--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 @import 'ui/navigation-swiper.scss';
 @import 'ui/slider-image.scss';
 @import 'ui/catalog-card.scss';
+@import 'ui/request.scss';
 
 // LAYOUT
 @import 'layout/header.scss';
