--- a/src/scss/ui/title.scss
+++ b/src/scss/ui/title.scss
@@ -22,16 +22,31 @@
     }
   }
 
-  &--small {
+  &--medium-narrow {
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 26px;
+
+    @include vp-tablet {
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 28px;
+    }
+  }
+
+  &--small,
+  &--small-line-big {
     font-weight: 500;
     font-size: 18px;
     line-height: 21px;
   }
 
+  &--small-line-big {
+    line-height: 130%;
+  }
+
   &--extra-small {
     font-weight: 500;
-    font-size: 18px;
-    line-height: 130%;
   }
 
   &--accent {
