feat(request): создает компанент для мобильных

--- a/src/components/blocks/index/popular.pug
+++ b/src/components/blocks/index/popular.pug
@@ -88,8 +88,10 @@ mixin popular()
             each option in optionsCard
               +catalog-card(option, classCartBtn= "catalog-card__cart-btn--popular").popular__cards-item
 
-            +request()
+            +request().request--desktop.popular__request-desktop
 
           +btn().btn--border-dashed-primary.popular__btn-look
             span Смотреть еще
+
+          +request().request--mobile.popular__request-mobile
 
