--- a/src/scss/ui/request.scss
+++ b/src/scss/ui/request.scss
@@ -1,7 +1,7 @@
 .request {
   display: flex;
   flex-direction: column;
-  padding: 7.813% 7.032%;
+  padding: 9.525% 7.408%;
   box-sizing: border-box;
   border-radius: 8px;
   background-color: $base-bg-btn;
@@ -11,14 +11,33 @@
 
   background-image: url('/images/magic-castle.png');
   background-repeat: no-repeat;
-  background-position: 80px 20px;
-  background-size: 150px;
+  background-position: 100% 75% ;
+  background-size: 133px;
+
+  @include vp-tablet {
+    padding: 5.455% 4.243%;
+
+    background-position: 100% 0;
+    background-size: 189px;
+  }
+
+  @include vp-tablet-landscape {
+    padding: 7.813% 7.032%;
+
+    background-position: 90% 0;
+    background-size: 150px;
+  }
 
   &__context {
-    width: 80%;
+    width: 82%;
+
+    @include vp-tablet {
+      width: 50%;
+    }
 
     @include vp-tablet-landscape {
       padding-top: 70%;
+      width: 80%;
     }
   }
 
@@ -29,16 +48,22 @@
   &__text {
     opacity: 0.8;
     margin-bottom: 26px;
-
-    @include vp-tablet-landscape {
-      margin-bottom: 0;
-    }
   }
 
   &__btn {
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
+
+    width: 55.5%;
+
+    @include vp-tablet {
+      width: 39.13%;
+    }
+
+    @include vp-tablet-landscape {
+      width: 100%;
+    }
 
     span {
       margin: 0 auto;
