--- a/src/scss/ui/catalog-card.scss
+++ b/src/scss/ui/catalog-card.scss
@@ -8,6 +8,12 @@
   border-radius: 8px;
   border: 1px solid $border-fill;
 
+  transition: box-shadow $trans-default;
+
+  @include hover {
+    box-shadow: 0px 0px 14px rgba($black, 0.08);
+  }
+
   &__link {
     img {
       margin-bottom: 25px;
