--- a/src/scss/ui/request.scss
+++ b/src/scss/ui/request.scss
@@ -14,6 +14,8 @@
   background-position: 100% 75% ;
   background-size: 133px;
 
+  transition: box-shadow $trans-default;
+
   @include vp-tablet {
     padding: 5.455% 4.243%;
 
@@ -26,6 +28,10 @@
 
     background-position: 90% 0;
     background-size: 150px;
+
+    @include hover {
+      box-shadow: 0px 0px 14px rgba($black, 0.08);
+    }
   }
 
   &__context {
