--- a/src/components/ui/request.pug
+++ b/src/components/ui/request.pug
@@ -1,6 +1,6 @@
 mixin request()
 
-  .request&attributes(attributes)
+  article.request&attributes(attributes)
 
     .request__context
       .request__title.title.title--medium-narrow
