--- a/src/scss/ui/catalog-card.scss
+++ b/src/scss/ui/catalog-card.scss
@@ -16,6 +16,9 @@
 
   &__link {
     img {
+      width: 72.33%;
+      height: auto;
+      margin: 0 auto;
       margin-bottom: 25px;
     }
   }
