fix(cooperation): правит тексты и декор фона в элементе отсрочка

--- a/src/components/blocks/common/cooperation.pug
+++ b/src/components/blocks/common/cooperation.pug
@@ -55,11 +55,11 @@ mixin cooperation()
         article.cooperation__deferment-block
 
           .cooperation__context
-            .title.title--small.cooperation__deferment-title
+            .title.title--medium-narrow-bold.cooperation__deferment-title
               h2 Необходима отсрочка платежа?
 
-            .text.text--small.cooperation__deferment-text
-              p Свяжитесь с менеджером#[br]для уточнение деталей
+            .text.text--medium-mix.cooperation__deferment-text
+              p Свяжитесь с менеджером для&nbsp;уточнение деталей
 
           +btn().btn--border-dashed-base.cooperation__deferment-btn
             span Связаться с&nbsp;менеджером
