--- a/src/scss/ui/btn.scss
+++ b/src/scss/ui/btn.scss
@@ -56,6 +56,7 @@
     border: 2px dashed rgba($base, 0.5);
     border-radius: 12px;
     color: $base;
+    padding: 15px 30px 16px;
   }
 
   &--border-dashed-primary {
