--- a/src/scss/ui/text.scss
+++ b/src/scss/ui/text.scss
@@ -21,6 +21,16 @@
     font-weight: 500;
   }
 
+  &--medium-mix {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 140%;
+
+    @include vp-tablet {
+      font-size: 16px;
+    }
+  }
+
   &--medium {
     font-size: 15px;
   }
