--- a/src/scss/ui/title.scss
+++ b/src/scss/ui/title.scss
@@ -34,6 +34,16 @@
     }
   }
 
+  &--medium-narrow-bold {
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 140%;
+
+    @include vp-tablet {
+      font-size: 24px;
+    }
+  }
+
   &--small,
   &--small-line-big {
     font-weight: 500;
