--- a/src/scss/blocks/common/certificates.scss
+++ b/src/scss/blocks/common/certificates.scss
@@ -30,10 +30,14 @@
 
     @include vp-tablet-landscape {
       flex-direction: row;
-      gap: 20px;
+      //gap: 20px;
       width: 100%;
 
       box-shadow: 900px 0 0 0 $accent-bg, -900px 0 0 0 $accent-bg;
+    }
+
+    @include vp-desktop {
+      gap: 20px;
     }
   }
 
