--- a/src/scss/blocks/common/certificates.scss
+++ b/src/scss/blocks/common/certificates.scss
@@ -3,7 +3,41 @@
   height: fit-content;
 
   &__container {
+    position: relative;
     background-color: $accent-bg;
+
+    &::before {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 28px;
+
+      background-image: url("/images/edge-bg.svg");
+      background-size: cover;
+      background-repeat: repeat;
+      background-position: center;
+      top: -14px;
+      left: 0;
+    }
+
+
+    &::after {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 28px;
+
+      background-image: url("/images/edge-bg.svg");
+      background-size: cover;
+      background-repeat: repeat;
+      background-position: center;
+      bottom: -14px;
+      left: 0;
+
+      transform: rotate(180deg);
+    }
   }
 
   .swiper-slide {
