feat(news-company): создает блок с компанентами и стилями

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -11,6 +11,7 @@ include ./blocks/common/cooperation
 include ./blocks/index/intro
 include ./blocks/index/advantages
 include ./blocks/index/popular
+include ./blocks/index/news-company
 
 
 //- UI
@@ -22,3 +23,4 @@ include ./ui/navigation-swiper
 include ./ui/slider-image
 include ./ui/catalog-card
 include ./ui/request
+include ./ui/news-cards
