--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -11,3 +11,4 @@ block pageContent
   +cooperation().page-home__cooperation
   +company().page-home__company
   +confidence().page-home__confidence
+  +news-company().page-home__news-company
