--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -4,6 +4,7 @@ $primary-hover: #743573;
 $secondary: #909090;
 $accent: cyan; // example
 $bg-intro: #055b5c;
+$bg-image: #814793;
 $accent-title: #fecb5e;
 $accent-bg-items: #ffdf85;
 $accent-bg-items-hover: #ffd151;
