--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@
 @import 'ui/slider-image.scss';
 @import 'ui/catalog-card.scss';
 @import 'ui/request.scss';
+@import 'ui/news-cards.scss';
 
 // LAYOUT
 @import 'layout/header.scss';
@@ -33,6 +34,7 @@
 @import 'blocks/index/intro.scss';
 @import 'blocks/index/advantages.scss';
 @import 'blocks/index/popular.scss';
+@import 'blocks/index/news-company.scss';
 
 // PAGES
 @import 'pages/page-home.scss';
