--- a/src/scss/ui/text.scss
+++ b/src/scss/ui/text.scss
@@ -21,6 +21,16 @@
     font-weight: 500;
   }
 
+  time {
+    font-weight: 500;
+    font-size: 12px;
+
+    @include vp-tablet {
+      font-weight: 400;
+      font-size: 14px;
+    }
+  }
+
   &--medium-mix {
     font-weight: 500;
     font-size: 14px;
