--- a/src/scss/ui/title.scss
+++ b/src/scss/ui/title.scss
@@ -44,6 +44,13 @@
     }
   }
 
+  &--small-large {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 140%;
+  }
+
+
   &--small,
   &--small-line-big {
     font-weight: 500;
