feat: создает и подключает страницы каталога и карточки продукта

--- a/src/components/blocks/index/popular.pug
+++ b/src/components/blocks/index/popular.pug
@@ -3,7 +3,7 @@ mixin popular()
   -
     const optionsCard = [
       {
-        hrefProduct: "#",
+        hrefProduct: "product.html",
         imageName: "toy-dragon",
         textTitle: "Сладкий подарок «Антошка»",
         textCode: "7898",
@@ -11,7 +11,7 @@ mixin popular()
         textInfo: "800 гр.",
       },
       {
-        hrefProduct: "#",
+        hrefProduct: "product.html",
         imageName: "toy-dragon",
         textTitle: "Сладкий подарок «Антошка»",
         textCode: "7898",
@@ -19,7 +19,7 @@ mixin popular()
         textInfo: "800 гр.",
       },
       {
-        hrefProduct: "#",
+        hrefProduct: "product.html",
         imageName: "toy-dragon",
         textTitle: "Сладкий подарок «Антошка»",
         textCode: "7898",
@@ -27,7 +27,7 @@ mixin popular()
         textInfo: "800 гр.",
       },
       {
-        hrefProduct: "#",
+        hrefProduct: "product.html",
         imageName: "toy-dragon",
         textTitle: "Сладкий подарок «Антошка»",
         textCode: "7898",
@@ -35,7 +35,7 @@ mixin popular()
         textInfo: "800 гр.",
       },
       {
-        hrefProduct: "#",
+        hrefProduct: "product.html",
         imageName: "toy-dragon",
         textTitle: "Сладкий подарок «Антошка»",
         textCode: "7898",
@@ -43,7 +43,7 @@ mixin popular()
         textInfo: "800 гр.",
       },
       {
-        hrefProduct: "#",
+        hrefProduct: "product.html",
         imageName: "toy-dragon",
         textTitle: "Сладкий подарок «Антошка»",
         textCode: "7898",
@@ -51,7 +51,7 @@ mixin popular()
         textInfo: "800 гр.",
       },
       {
-        hrefProduct: "#",
+        hrefProduct: "product.html",
         imageName: "toy-dragon",
         textTitle: "Сладкий подарок «Антошка»",
         textCode: "7898",
@@ -59,7 +59,7 @@ mixin popular()
         textInfo: "800 гр.",
       },
       {
-        hrefProduct: "#",
+        hrefProduct: "product.html",
         imageName: "toy-dragon",
         textTitle: "Сладкий подарок «Антошка»",
         textCode: "7898",
@@ -67,7 +67,7 @@ mixin popular()
         textInfo: "800 гр.",
       },
       {
-        hrefProduct: "#",
+        hrefProduct: "product.html",
         imageName: "toy-dragon",
         textTitle: "Сладкий подарок «Антошка»",
         textCode: "7898",
