feat(card-product): создает разметку и компонент переключателя

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -13,6 +13,8 @@ include ./blocks/index/advantages
 include ./blocks/index/popular
 include ./blocks/index/news-company
 
+include ./blocks/product/card-product
+
 
 //- UI
 include ./ui/icon
@@ -24,3 +26,4 @@ include ./ui/slider-image
 include ./ui/catalog-card
 include ./ui/request
 include ./ui/news-cards
+include ./ui/custom-toggle
