--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,6 +36,8 @@
 @import 'blocks/index/popular.scss';
 @import 'blocks/index/news-company.scss';
 
+@import 'blocks/product/card-product.scss';
+
 // PAGES
 @import 'pages/page-home.scss';
 @import 'pages/catalog.scss';
