--- a/src/scss/ui/title.scss
+++ b/src/scss/ui/title.scss
@@ -22,6 +22,16 @@
     }
   }
 
+  &--medium-litle {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 140%;
+
+    @include vp-tablet {
+      font-size: 32px;
+    }
+  }
+
   &--medium-narrow {
     font-weight: 500;
     font-size: 22px;
