--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,7 @@
 @import 'ui/catalog-card.scss';
 @import 'ui/request.scss';
 @import 'ui/news-cards.scss';
+@import 'ui/custom-toggle.scss';
 
 // LAYOUT
 @import 'layout/header.scss';
